.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Working_Day__c.object
<CustomObject>
    <fields>
        <fullName>xcdhcm__Day__c</fullName>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                    <default>true</default>
                    <label>Monday</label>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Day_number__c</fullName>
        <formula>VALUE( Name )</formula>
        <label>Day number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_am__c</fullName>
        <defaultValue>&quot;00:00&quot;</defaultValue>
        <inlineHelpText>Please enter hours and minutes using the format hh:mm.</inlineHelpText>
        <label>Hours AM(hh:mm )</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_am_value__c</fullName>
        <formula>VALUE(LEFT( xcdhcm__Hours_am__c ,Find(&quot;:&quot;, xcdhcm__Hours_am__c )-1)) + VALUE(RIGHT( xcdhcm__Hours_am__c ,Find(&quot;:&quot;, xcdhcm__Hours_am__c )-1)) / 60.0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours am value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_pm__c</fullName>
        <defaultValue>&quot;00:00&quot;</defaultValue>
        <inlineHelpText>Please enter hours and minutes using the format hh:mm.</inlineHelpText>
        <label>Hours PM(hh:mm )</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_pm_value__c</fullName>
        <formula>VALUE(LEFT( xcdhcm__Hours_pm__c ,Find(&quot;:&quot;, xcdhcm__Hours_pm__c )-1)) + VALUE(RIGHT( xcdhcm__Hours_pm__c ,Find(&quot;:&quot;, xcdhcm__Hours_pm__c )-1)) / 60.0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours pm value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__System_Working_day__c</fullName>
        <formula>IF(OR( xcdhcm__Hours_am_value__c &gt; 0,  xcdhcm__Hours_pm_value__c &gt; 0), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System: Working day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_Cycle__c</fullName>
        <label>Work Cycle</label>
        <referenceTo>xcdhcm__Work_Cycle__c</referenceTo>
        <relationshipLabel>Working Days</relationshipLabel>
        <relationshipName>Working_Days</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Working Day</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Day__c</columns>
        <columns>xcdhcm__Work_Cycle__c</columns>
        <columns>xcdhcm__System_Working_day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Day number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Working Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Hour_AM_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(NOT(ISNEW()),
NOT(AND(REGEX(xcdhcm__Hours_am__c,&quot;[0-1][0-9]:[0-5][0-9]&quot;),CONTAINS(xcdhcm__Hours_am__c,&quot;:&quot;) )) 
,NULL)</errorConditionFormula>
        <errorDisplayField>xcdhcm__Hours_am__c</errorDisplayField>
        <errorMessage>Hours am - Please enter hours and minutes using the format hh:mm</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Hour_PM_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(NOT(ISNEW()),
NOT(AND(REGEX(xcdhcm__Hours_pm__c,&quot;[0-1][0-9]:[0-5][0-9]&quot;),CONTAINS(xcdhcm__Hours_pm__c,&quot;:&quot;) )) 
,NULL)</errorConditionFormula>
        <errorDisplayField>xcdhcm__Hours_pm__c</errorDisplayField>
        <errorMessage>Hours pm - Please enter hours and minutes using the format hh:mm</errorMessage>
    </validationRules>
</CustomObject>